--- a/LaTeX Poster Template/poster.tex
+++ b/LaTeX Poster Template/poster.tex
@@ -108,11 +108,11 @@
     % Background
 	\Section{Background}
     \vspace{0.5cm}
-    \lipsum[2]
+    \lipsum[2-5]
 
     %Experiment
     \Section{Experiment}
-    \lipsum[3]
+    \lipsum[3-9]
         
     % Figure 1
     \begin{figure}
