--- a/LaTeX Poster Template/poster.tex
+++ b/LaTeX Poster Template/poster.tex
@@ -103,15 +103,21 @@
 
     % Introduction
 	\Section{Introduction}
+ 
+    % Delete for Professional Use
     \lipsum[1] \parencite{Ctan}
 
     % Background
 	\Section{Background}
     \vspace{0.5cm}
+
+    % Delete for Professional Use
     \lipsum[2-5]
 
     %Experiment
     \Section{Experiment}
+
+    % Delete for Professional Use
     \lipsum[3-9]
         
     % Figure 1
@@ -141,10 +147,14 @@
         \caption{Dodecagon with Vertices labelled with corresponding Notes}
         \label{fig:musical-D_12}
     \end{figure}
+
+    % Delete for Professional Use
     \lipsum[4]
 
     % Results
     \Section{Results}
+
+    % Delete for Professional Use
     \lipsum[5]
 
     % References
